changed wrapper height css to prevent it stretching out of bounds if quote text is too big

--- a/src/index.css
+++ b/src/index.css
@@ -20,7 +20,6 @@ code {
 }
 #wrapper {
   width:800px;
-  height:600px;
   background-color: beige;
   margin: auto auto;
   margin-top: 125px;
